<resources>
    <string name="app_name">MAD105Project</string>

    <string name="txtTitle">Life Planer</string>

    <string name="txtQues1">Is today a weekend?</string>
    <string name="txtQues2">Do you have chores to do?</string>
    <string name="txtQues3">When Did you last see your friends?</string>

    <string name="rdBtn1_1">yes!</string>
    <string name="rdBtn1_2">no.</string>
    <string name="rdBtn2_1">yes!</string>
    <string name="rdBtn2_2">no.</string>
    <string name="rdBtn3_1">It has been a while..</string>
    <string name="rdBtn3_2">Yesterday, of course!</string>

    <string name="txtBtnSchedule">Schedule</string>


    <string name="txtScheduleResults1">Call Mom to go shopping</string>
    <string name="txtScheduleResults2">hot pockets for dinner, text someone</string>
    <string name="txtScheduleResults3">PARTY WITH THE FRIENDS!</string>
    <string name="txtScheduleResults4">Get coffee after work</string>
    <string name="txtScheduleResults5">Do your chores!</string>
    <string name="txtScheduleResults6">Work Day!</string>
    <string name="txtScheduleResults7">Relaxing walk in the woods.</string>
    <string name="txtScheduleResults8">easy work day.</string>
    <string name="txtScheduleResults0">Scheduling requires input</string>


    <string name="txtShoppingTitle">Shopping List</string>
    <string-array name="arrShopItems">
        <item>Milk</item>
        <item>Eggs</item>
        <item>Cheese</item>
        <item>Bread</item>
        <item>Chips</item>
        <item>Soda</item>
        <item>Meat</item>
        <item>Pasta</item>
        <item>Seasoning</item>
        <item>Paper Products</item>
        <item>Toiletries</item>
        <item>Detergent</item>
    </string-array>

    <string name="rdBtnAddList">Add Item</string>
    <string name="rdBtnSubList">Subtract Item</string>

    <string name="txtShopConfirm">Confirm</string>

    <string name="txtShoppingOpen">Open Shopping List</string>
    <string name="txtOpenContacts">Open Contacts Page</string>



    <string name="txtContactList">Contact List</string>
    <string name="hntName">Name</string>
    <string name="hntPhone">Phone Number</string>
    <string name="hntEmail">Email</string>
    <string name="hntAddress">Address</string>
    <string name="hntSearch">Search</string>


    <string name="txtSaveContact">Save Contact</string>
    <string name="txtViewContact">View Info</string>


</resources>